Add VSCode settings and update workspace template
- Introduced a new settings.json file for VSCode configuration.
- Removed the old ws.code-workspace file and updated the project to use ws.j2 as the workspace template.
- Adjusted the VscodeProjectCreator class to reflect these changes in template paths.

--- a/src/ros_project_creator/resources/vscode/settings.json
+++ b/src/ros_project_creator/resources/vscode/settings.json
@@ -78,9 +78,5 @@
   // ==========================================================================
   "xmlTools.enableXmlTreeView": true,
   "xmlTools.splitAttributesOnFormat": true,
-  "xmlTools.xmlFormatterImplementation": "v2",
-  // ==========================================================================
-  // ROS SETTINGS
-  // ==========================================================================
-  "ros.distro": "{{ ros_distro }}"
+  "xmlTools.xmlFormatterImplementation": "v2"
 }
