--- a/src/ros_project_creator/resources/git/dot_pre-commit-config.yaml
+++ b/src/ros_project_creator/resources/git/dot_pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
       - id: trailing-whitespace
       - id: no-commit-to-branch
         args:
+          - --branch=main
           - --branch=master
 
   # Python hooks
