--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -25,9 +26,9 @@ classifiers = [
 ]
 
 [project.urls]
-Repository = "https://github.com/jfrascon/ros_project_creator"
-Issues = "https://github.com/jfrascon/ros_project_creator/issues"
-Homepage = "https://github.com/jfrascon/ros_project_creator"
+Repository = "https://ice.eurecat.org/gitlab/robotics-automation/ros_project_creator"
+Issues = "https://ice.eurecat.org/gitlab/robotics-automation/ros_project_creator/issues"
+Homepage = "https://ice.eurecat.org/gitlab/robotics-automation/ros_project_creator"
 
 [project.scripts]
 create_ros_project = "ros_project_creator.create_ros_project:main"
